# surfer_simulation

surfer_description/: CMakeLists.txt  package.xml
surfer_description/meshes/: SURFER_HULL.STL  T200-PROPELLER.STL  T200_propeller.dae
surfer_description/urdf/: macros.xacro  materials.xacro  surfer.gazebo  surfer.sdf  surfer.urdf  surfer.xacro  surfer.xacro.urdf
surfer_gazebo/: CMakeLists.txt  package.xml
surfer_gazebo/launch/: start_surf_launch.py  surfer_spawn_launch.py
surfer_gazebo/src/: spawn_model.py
surfer_gazebo/worlds/: surf_simple.world
surfer_gazebo_plugins/buoyant_link/: BuoyantLink.cc  BuoyantLink.hh  CMakeLists.txt  buoyant_link.kdev4  buoyant_link_plugin.sdf
surfer_gazebo_plugins/buoyant_link/.kdev4/: buoyant_link.kdev4
surfer_gazebo_plugins/propeller_link/: CMakeLists.txt  Propeller.cc  Propeller.hh  propeller_link.kdev4
surfer_gazebo_plugins/propeller_link/.kdev4/: propeller_link.kdev4
